Clean architecture added to the project
bugs fixed

Comments fixed

package ejemplo deleted

blanks added

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "marvelApp"
 include ':app'
+include ':domain'
+include ':data'
+include ':di'
