--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        buildConfigField "String", "BASE_URL", "\"https://gateway.marvel.com:443\""
-        buildConfigField "String", "KEY_VALUE", "\"bb4fc0787cb23c61a10100aabb89732d\""
-        buildConfigField "String", "HASH_VALUE", "\"689d833a5d7ac6e272f384ac17f11c73\""
     }
 
     buildTypes {
@@ -40,6 +36,8 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':domain')
+    implementation project(path: ':di')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
@@ -47,15 +45,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.activity:activity-ktx:1.5.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'io.insert-koin:koin-android:3.1.2'
-    implementation 'com.google.code.gson:gson:2.9.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'androidx.room:room-runtime:2.4.3'
-    implementation 'androidx.room:room-ktx:2.4.3'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     kapt 'com.github.bumptech.glide:compiler:4.13.2'
-    kapt 'androidx.room:room-compiler:2.4.3'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:2.2.7'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
